[web] Add: Task #5637 Fix image align bug

--- a/source/web/src/static/styles/propertyDetails.less
+++ b/source/web/src/static/styles/propertyDetails.less
@@ -501,17 +501,16 @@ body{
                 line-height: 16px;
                 margin-right: 4px;
 
-                @media @phone {
-                    width: @base-font-size-moblie;
-                    height: @base-font-size-moblie;
-                    line-height: @base-font-size-moblie;
-                }
             }
             .name {
                 display: inline-block; min-width: 6em;
                 @media @phone {
                     font-size: @base-font-size-moblie;
                     padding-left:20px;
+                }
+
+                label {
+                    vertical-align:middle;
                 }
 
             }
